@startuml class_diagram
title Class Diagram

package lib {
    package interfaces {
        interface ScrollableTableDataSource {
            scrollableTableDimensions(): Dimension;
            scrollableTableFixedHeaderCell(): TableCell;
            scrollableTableColumnHeaderCell(col: number): TableCell;
            scrollabelTableRowHeaderCell(row: number): TableCell;
            scrollabalTableRecordsCell(path: Dimension): TableCell;
        }
    }
}

package models {

    class Dimension {
        + row: number
        + col: number
        --
        + constructor(col: number, row: number)
        + get det(): number
    }

    class TableCell {
        + key: string
        + root: HTMLElement
        --
        + constructor(key: string)
        + render(): HTMLElement
    }

    Dimension <.. ScrollableTableDataSource
}


class ScrollableTable {
    -- DOM --
    + rootDiv: HTMLElement
    + fixedHeaderDiv: HTMLElement
    + columnHeaderDiv: HTMLElement
    + rowHeaderDiv: HTMLElement
    + recordsDiv: HTMLElement
    -- delegate --
    - dataSource: ScrollableTableDataSource
    --
    + constructor(root: HTMLElement, dataSource: ScrollableTableDataSource)
    + render()
    - removeCells()
    - addCells()
    - editFixedHeaderCell()
    - editColumnHeaderCells()
    - editRowHeaderCells()
    - editRecordCells()
    - resizeCell()
    - setScrolls()
    - cell()
}

ScrollableTableDataSource <.. ScrollableTable
Dimension <.. ScrollableTable 
ScrollableTable o-- TableCell



@enduml